--- a/The Mars Project/client/index.html
+++ b/The Mars Project/client/index.html
@@ -4,9 +4,15 @@
   <meta charset="utf-8">
   <title>The Mars Project</title>
   <link rel="stylesheet" type="text/css" href="styles/style.css" />
+  <link rel="styleshee" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css"></script>
 </head>
 <body ng-app="mars">
+
+  <!--ng-view directive-->
   <div ng-view=""></div>
 
+  <script src="../bower_components/angular/angular.js"></script>
+
+  <script src="app/app.js"></script>
 </body>
 </html>
