Update MVP - Styled page to include navbar, banner, and buttons. Images show up based on button-click.

--- a/The Mars Project/client/index.html
+++ b/The Mars Project/client/index.html
@@ -5,6 +5,7 @@
   <title>The Mars Project</title>
   <link rel="stylesheet" type="text/css" href="styles/style.css" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.css"></script>
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
 </head>
 <body ng-app="mars">
 
