--- a/The Mars Project/client/index.html
+++ b/The Mars Project/client/index.html
@@ -19,5 +19,8 @@
   <script src="app/app.js"></script>
   <script src="services/services.js"></script>
   <script src="pictures/pictures.js"></script>
+  <script src="controllers/cameraController.js"></script>
+  <script src="models/Camera.js"></script>
+  <script src="routers/cameraRouter.js"></script>
 </body>
 </html>
