--- a/The Mars Project/client/pictures/pictures.html
+++ b/The Mars Project/client/pictures/pictures.html
@@ -1,33 +1,37 @@
-<div class="container" ng-controller="PicturesController">
-  <div ng-include="'../components/navbar/navbar.html'"></div>
-    <header class="hero-unit" id="banner">
-      <h1 class="site-title">Curiosity</h1>
-      <div class="button-group">
-        <button type="button" class="btn btn-default" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('290', 'FHAZ')">
-          FHAZ
-        </button>
-        <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('430', 'NAVCAM')">
-          NAVCAM
-        </button>
-        <button type="button" class="btn btn-success" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('540', 'MAST')">
-          MAST
-        </button>
-        <button type="button" class="btn btn-info" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('660', 'CHEMCAM')">
-          CHEMCAM
-        </button>
-        <button type="button" class="btn btn-warning" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('770', 'MAHLI')">
-          MAHLI
-        </button>
-        <button type="button" class="btn btn-danger" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('850', 'MARDI')">
-          MARDI
-        </button>
-        <button type="button" class="btn btn-default" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('1300', 'RHAZ')">
-          RHAZ
-        </button>
-      </div>
-    </header>
-    <div class="img-container" ng-repeat="pic in photos.photos">
-      <img src="{{pic.img_src}}" />
-      <h4>{{pic.earth_date}}</h4>
+<div ng-include="'../components/navbar/navbar.html'"></div>
+<div ng-include="'../components/footer/footer.html'"></div>
+    <div class="container" ng-controller="PicturesController">
+      <header class="hero-unit" id="banner">
+        <h1 class="site-title">Curiosity</h1>
+        <div class="button-group">
+          <button type="button" class="btn btn-default" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('290', 'FHAZ')">
+            FHAZ
+          </button>
+          <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('430', 'NAVCAM')">
+            NAVCAM
+          </button>
+          <button type="button" class="btn btn-success" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('540', 'MAST')">
+            MAST
+          </button>
+          <button type="button" class="btn btn-info" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('660', 'CHEMCAM')">
+            CHEMCAM
+          </button>
+          <button type="button" class="btn btn-warning" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('770', 'MAHLI')">
+            MAHLI
+          </button>
+          <button type="button" class="btn btn-danger" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('850', 'MARDI')">
+            MARDI
+          </button>
+          <button type="button" class="btn btn-default" data-toggle="button" aria-pressed="false" autocomplete="off" ng-click="showPic('1300', 'RHAZ')">
+            RHAZ
+          </button>
+        </div>
+      </header>
+      <div class="img-container" ng-repeat="camera in photos.photos">
+        <img src="{{camera.img_src}}" />
+        <div class="rover-info">
+          <span class="full-name"><h4>{{camera.camera.full_name}}</h4></span>
+          <span class="earth-date"><h4>{{camera.earth_date}}</h4></span>
+        </div>
+    </div>
   </div>
-</div>
