--- a/The Mars Project/client/index.html
+++ b/The Mars Project/client/index.html
@@ -20,6 +20,7 @@
   <script src="services/services.js"></script>
   <script src="pictures/pictures.js"></script>
   <script src="apod/apod.js"></script>
+  <script src="app/auth/auth.js"></script>
   <script src="controllers/cameraController.js"></script>
   <script src="models/Camera.js"></script>
   <script src="routers/cameraRouter.js"></script>
